--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,7 +10,7 @@
     <h1>나는 홈</h1>
     <a href="/login">로그인</a><br>
     <a href="/logout">로그아웃</a><br>
-    <a href="/signup">회원가입</a><br>
+    <a href="/join">회원가입</a><br>
     <a href="/user">유저</a><br>
 
 </body>
