--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h1>회원가입</h1>
-    <form action="/signup" method="post">
-        <input type="text" name="username" id="username" placeholder="아이디">
-        <input type="password" name="password" id="password" placeholder="패스워드">
+    <form action="/join" method="post">
+        <input type="text" name="username" id="username" placeholder="아이디"><br>
+        <input type="password" name="password" id="password" placeholder="패스워드"><br>
+        <input type="email" name="email" id="email" placeholder="이메일"><br>
         <button type="submit">회원가입!</button>
     </form> 
 </body>
