--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,7 +14,8 @@
         <button type="submit">로그인</button>
     </form> 
 
-    <a href="/oauth2/authorization/google">구글 로그인</a>
+    <a href="/oauth2/authorization/google">구글 로그인</a><br>
+    <a href="/oauth2/authorization/facebook">페북 로그인</a><br>
     <a href="/join">회원가입</a>
 </body>
 </html>
