--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,6 +16,7 @@
 
     <a href="/oauth2/authorization/google">구글 로그인</a><br>
     <a href="/oauth2/authorization/facebook">페북 로그인</a><br>
+    <a href="/oauth2/authorization/naver">네이버 로그인</a><br>
     <a href="/join">회원가입</a>
 </body>
 </html>
