[완료] OAuth 완료 google, fb, kakao, naver 로그인,회원가입 완료

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -10,5 +10,9 @@
     <h1>나는 어드민</h1>
     <a href="/">홈</a><br>
     <a href="/logout">로그아웃</a>
+<script>
+    const hi = aa
+    console.log(hi)
+</script>
 </body>
 </html>
